Fix colors for dark mode

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -10,13 +10,35 @@
     
 }
 
-.nav-bar {
-    background-color: var(--bg-color-footer) !important;
+h1 {
+    color: var(--h1-text-color)
+}
+
+h2 {
+    color: var(--h2-text-color);
+}
+
+h4 {
+    font-size: x-large;
+}
+
+.VPLink.link.VPNavBarMenuLink {
+    font-size: large;
+}
+
+div.VPNavBarTitle > a {
+    font-size: large !important;
+
+}
+
+button.button > span.text {
+    font-size: large !important;
 }
 
 div.VPNavBarAppearance.appearance {
     display: none;
 }
+
 .table-wrapper, .home {
     /* border: 2px solid red; */
     height: 90vh;
@@ -24,7 +46,7 @@ div.VPNavBarAppearance.appearance {
     margin-bottom: 300px;
 }
 
-.aside {
+.aside, .VPFlyout.VPNavBarExtra.extra {
     display: none !important;
 }
 
@@ -37,6 +59,10 @@ div.VPNavBarAppearance.appearance {
 .VPButton.medium.alt:hover {
     background-color: var(--vp-button-alt-hover);
     color: var(--vp-button-brand-text);
+}
+
+h2 a, p a, h4 a {
+    color: var(--contrast-link-color) !important;
 }
 
 .btn-footer-div {
@@ -77,6 +103,18 @@ footer, .page-footer {
     text-align: center;
 }
 
+.contact-table-wrapper {
+    display: grid;
+    grid-template-columns: 35% 65%;
+    align-items: center;
+    height: 100%;
+}
+.contact-div {
+    display: flex;
+    flex-direction: column;
+    padding-left: 35px;
+}
+
 @media only screen and (max-width: 640px) {
     .table-wrapper {
         /* background-color: yellow; */
@@ -109,6 +147,30 @@ footer, .page-footer {
         /* text-align: center; */
     }
 
+    .contact-table-wrapper {
+        /* border: 2px solid red; */
+        display: inline;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .contact-logo {
+        /* border: 5px solid yellow; */
+        height: 150px;
+    }
+    .contact-div {
+        /* background-color: red; */
+        display: flex;
+        flex-direction: column;
+        padding-left: 20px;
+        /* align-items: center; */
+    }
+
+    .contact-text {
+        text-align: center;
+    }
+
 }
 
 @media (prefers-color-scheme: light) {
@@ -119,19 +181,24 @@ footer, .page-footer {
         --text-color-light: #ddd;
         --bg-color-footer: lightgray;
         /* --c-brand: #195955; */
-        --vp-home-hero-name-color: #588124;
+        --vp-home-hero-name-color: #435E1C;
         --vp-c-text-1: #245881;
-        --vp-c-brand: #588124;
+        --vp-c-brand: #435E1C;
 
-        --vp-button-brand-bg: #588124;
-        --vp-button-brand-border: #588124;
+        --vp-button-brand-bg: #435E1C;
+        --vp-button-brand-border: #435E1C;
         --vp-button-brand-text: white;
         --vp-button-brand-hover: #812458;
 
         --vp-button-alt-bg: white;
-        --vp-button-alt-border: #588124;
-        --vp-button-alt-text: #588124;
+        --vp-button-alt-border: #435E1C;
+        --vp-button-alt-text: #435E1C;
         --vp-button-alt-hover: #812458;
+
+        --h1-text-color: #435E1C;
+        --h2-text-color: #435E1C;
+
+        --contrast-link-color: #812458;
     }
 
     .green {
@@ -148,23 +215,28 @@ footer, .page-footer {
       --background-color-primary: black;
       --c-bg: #15202B;
 
-      --accent-color: #588124;
+      --accent-color: #73A92F;
       --text-primary-color: #ddd;
       --bg-color-footer: #223345;
 
-      --vp-home-hero-name-color: #588124;
+      --vp-home-hero-name-color: #73A92F;
       --vp-c-text-1: whitesmoke;
       --vp-c-brand: #73A92F;
 
-      --vp-button-brand-bg: #588124;
-      --vp-button-brand-border: #588124;
+      --vp-button-brand-bg: #73A92F;
+      --vp-button-brand-border: #73A92F
       --vp-button-brand-text: white;
-      --vp-button-brand-hover: #812458;
+      --vp-button-brand-hover: #2FA9A2;
 
       --vp-button-alt-bg: white;
-      --vp-button-alt-border: #588124;
-      --vp-button-alt-text: #588124;
-      --vp-button-alt-hover: #812458;
+      --vp-button-alt-border: #73A92F;
+      --vp-button-alt-text: #73A92F;
+      --vp-button-alt-hover: #2FA9A2;
+
+      --h1-text-color: #73A92F;
+      --h2-text-color: #73A92F;
+
+      --contrast-link-color: #2FA9A2;
     }
 
     .blue {
